# erp

./: .env  .gitignore  db.sqlite3  manage.py  pyproject.toml
.env/: pyvenv.cfg
.env/Scripts/: activate  activate.bat
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_options.py  0002_user_address_user_is_expert_user_phone_and_more.py  0003_user_balance.py  0003_user_created_at_user_updated_at.py
attendance/: admin.py  models.py  urls.py  views.py
attendance/migrations/: 0001_initial.py  0002_alter_attendance_options.py  0002_attendance_marked_by.py  0002_attendance_notes_alter_attendance_marked_by_and_more.py  0003_alter_attendance_marked_by_alter_attendance_student_and_more.py  0003_alter_attendance_options_remove_attendance_date_and_more.py  0004_alter_attendance_options_attendance_date_and_more.py
attendance/templatetags/: __init__.py  attendance_tags.py
conf/: settings.py  urls.py
courses/: admin.py  models.py  urls.py  utils.py  views.py
courses/migrations/: 0001_initial.py  0002_alter_course_options.py  0002_course_large_description_course_large_image_and_more.py  0003_comment_updated_at_course_created_at_and_more.py  0003_course_price.py  (+11 more)
finance/: admin.py  models.py  urls.py  views.py
messaging/: admin.py  forms.py  models.py  urls.py  views.py
reports/: urls.py  views.py
students/: admin.py  models.py  urls.py  views.py
tasks/: admin.py  models.py  urls.py  views.py
teachers/: admin.py  models.py  urls.py  views.py
templates/: base.html  dashboard.html  index.html
(+94 files in other folders)
